--- a/bib.bib
+++ b/bib.bib
@@ -22,6 +22,15 @@
     note = {R package version 1.9.6},
     url = {https://CRAN.R-project.org/package=data.table},
   }
+  @Article{drake,
+    title = {The drake R package: a pipeline toolkit for reproducibility and high-performance computing},
+    author = {William Michael Landau},
+    journal = {Journal of Open Source Software},
+    year = {2018},
+    volume = {3},
+    number = {21},
+    url = {https://doi.org/10.21105/joss.00550},
+  }
   @Book{ggplot2,
     author = {Hadley Wickham},
     title = {ggplot2: Elegant Graphics for Data Analysis},
